# PackagePurge

./: .gitignore  .npmignore  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  package-lock.json  package.json
.agent/workflows/: build.md
.github/workflows/: release.yml
core/: Cargo.toml
core/src/: arc_lfu.rs  cache.rs  feature_store.rs  lockfiles.rs  main.rs  ml.rs  optimization.rs  safety.rs  scan_cache.rs  scanner.rs  symlink.rs  types.rs  usage_tracker.rs
src/cli/: index.ts
src/core/: bindings.ts
src/managers/: base-manager.ts  index.ts  npm-manager.ts  pnpm-manager.ts  yarn-manager.ts
src/types/: index.ts
src/utils/: config.ts  core-utils.ts  formatter.ts  logger.ts
