[package]
name = "packagepurge_core"
version = "0.1.0"
authors = ["Eng. Onyango Benard"]
edition = "2021"

[dependencies]
walkdir = "2.5"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
fs_extra = "1.3"
ignore = "0.4"
regex = "1.11"
dirs = "5.0"
tempfile = "3.10"
rusqlite = { version = "0.32", features = ["bundled"] }
